Resolve #8 and add toggle to wrap text in header

--- a/sass/px-accordion.scss
+++ b/sass/px-accordion.scss
@@ -39,6 +39,18 @@
   &[disabled] {
     cursor: not-allowed;
   }
+
+  &--nowrap {
+    > .flex {
+      min-width: 0;
+    }
+
+    span#headerValue, .accordion__status {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap
+    }
+  }
 }
 
 .accordion__expand__collapse {
@@ -49,6 +61,7 @@
   --iron-icon-width: 1rem;
   --iron-icon-height: 1rem;
 }
+
 
 .accordion__status {
   margin-right: 1rem;
